Update project source after restructuring